examples/invalid/duplicate_ids.jd
justification j {
    conclusion c is "The system is correct"
    strategy s is "Testing"
    s supports c
    evidence s is "Test results"
    s supports s
}
